--- a/Controls/QueryManagementControl.xaml
+++ b/Controls/QueryManagementControl.xaml
@@ -62,21 +62,6 @@
                         </StackPanel>
                     </Button>
                     
-                    <Button x:Name="EditQueryButton" 
-                            Width="100" Height="36"
-                            Click="EditQueryButton_Click"
-                            IsEnabled="False"
-                            Background="#FFFFC107"
-                            BorderThickness="0"
-                            Cursor="Hand"
-                            FontWeight="SemiBold"
-                            Margin="0,0,10,0">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="✏️" FontSize="14" Margin="0,0,5,0"/>
-                            <TextBlock Text="수정"/>
-                        </StackPanel>
-                    </Button>
-                    
                     <Button x:Name="DeleteQueryButton" 
                             Width="100" Height="36"
                             Click="DeleteQueryButton_Click"
@@ -285,7 +270,7 @@
                             </DataGridComboBoxColumn.EditingElementStyle>
                         </DataGridComboBoxColumn>
                         
-                        <DataGridTextColumn Header="비즈명" Binding="{Binding BizName, UpdateSourceTrigger=PropertyChanged}" Width="150"/>
+                        <DataGridTextColumn Header="비즈명/그룹명" Binding="{Binding BizName, UpdateSourceTrigger=PropertyChanged}" Width="150"/>
                         <DataGridTextColumn Header="설명" Binding="{Binding Description2, UpdateSourceTrigger=PropertyChanged}" Width="200"/>
                         <DataGridTextColumn Header="순번" Binding="{Binding OrderNumber, UpdateSourceTrigger=PropertyChanged}" Width="60">
                             <DataGridTextColumn.ElementStyle>
